<?xml version="1.0"?>
<package format="2">
  <name>gesture_msgs</name>
  <version>0.0.0</version>
  <description>The gesture_msgs package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ipencina@ing.uc3m.es">ipencina</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
            <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>
</package>
